source/compiler/parser/parser.c
/* A recursive-descent parser generated by peg 0.1.19 */

#include <stdio.h>
#include <stdlib.h>
#include <string.h>
#define YYRULECOUNT 99
#line 1 "./compiler/parser/parser.leg"

#ifndef PARSER_C
#define PARSER_C

#define YYSTYPE oop

YYSTYPE result;

int newline = 1;


#ifndef YY_MALLOC
#define YY_MALLOC(C, N)		malloc(N)
#endif
#ifndef YY_REALLOC
#define YY_REALLOC(C, P, N)	realloc(P, N)
#endif
#ifndef YY_FREE
#define YY_FREE(C, P)		free(P)
#endif
#ifndef YY_LOCAL
#define YY_LOCAL(T)	static T
#endif
#ifndef YY_ACTION
#define YY_ACTION(T)	static T
#endif
#ifndef YY_RULE
#define YY_RULE(T)	static T
#endif
#ifndef YY_PARSE
#define YY_PARSE(T)	T
#endif
#ifndef YYPARSE
#define YYPARSE		yyparse
#endif
#ifndef YYPARSEFROM_R
#define YYPARSEFROM_R	yyparsefrom_r
#endif
#ifndef YYPARSEFROM
#define YYPARSEFROM	yyparsefrom
#endif
#ifndef YYRELEASE
#define YYRELEASE	yyrelease
#endif
#ifndef YY_BEGIN
#define YY_BEGIN	( yy->__begin= yy->__pos, 1)
#endif
#ifndef YY_END
#define YY_END		( yy->__end= yy->__pos, 1)
#endif
#ifdef YY_DEBUG
# define yyprintf(args)	fprintf args
#else
# define yyprintf(args)
#endif
#ifndef YYSTYPE
#define YYSTYPE	int
#endif
#ifndef YY_STACK_SIZE
#define YY_STACK_SIZE 128
#endif

#ifndef YY_BUFFER_SIZE
#define YY_BUFFER_SIZE 1024
#endif

#ifndef YY_PART

typedef struct _yycontext yycontext;
typedef void (*yyaction)(yycontext *yy, char *yytext, int yyleng);
typedef struct _yythunk { int begin, end;  yyaction  action;  struct _yythunk *next; } yythunk;

struct _yycontext {
  char     *__buf;
  int       __buflen;
  int       __pos;
  int       __limit;
  char     *__text;
  int       __textlen;
  int       __begin;
  int       __end;
  int       __textmax;
  yythunk  *__thunks;
  int       __thunkslen;
  int       __thunkpos;
  YYSTYPE   __;
  YYSTYPE  *__val;
  YYSTYPE  *__vals;
  int       __valslen;
#ifdef YY_CTX_MEMBERS
  YY_CTX_MEMBERS
#endif
};

#ifdef YY_CTX_LOCAL
#define YY_CTX_PARAM_	yycontext *yyctx,
#define YY_CTX_PARAM	yycontext *yyctx
#define YY_CTX_ARG_	yyctx,
#define YY_CTX_ARG	yyctx
#ifndef YY_INPUT
#define YY_INPUT(yy, buf, result, max_size)		\
  {							\
    int yyc= getchar();					\
    result= (EOF == yyc) ? 0 : (*(buf)= yyc, 1);	\
    yyprintf((stderr, "<%c>", yyc));			\
  }
#endif
#else
#define YY_CTX_PARAM_
#define YY_CTX_PARAM
#define YY_CTX_ARG_
#define YY_CTX_ARG
yycontext _yyctx= { 0, 0 };
yycontext *yyctx= &_yyctx;
#ifndef YY_INPUT
#define YY_INPUT(buf, result, max_size)			\
  {							\
    int yyc= getchar();					\
    result= (EOF == yyc) ? 0 : (*(buf)= yyc, 1);	\
    yyprintf((stderr, "<%c>", yyc));			\
  }
#endif
#endif

YY_LOCAL(int) yyrefill(yycontext *yy)
{
  int yyn;
  while (yy->__buflen - yy->__pos < 512)
    {
      yy->__buflen *= 2;
      yy->__buf= (char *)YY_REALLOC(yy, yy->__buf, yy->__buflen);
    }
#ifdef YY_CTX_LOCAL
  YY_INPUT(yy, (yy->__buf + yy->__pos), yyn, (yy->__buflen - yy->__pos));
#else
  YY_INPUT((yy->__buf + yy->__pos), yyn, (yy->__buflen - yy->__pos));
#endif
  if (!yyn) return 0;
  yy->__limit += yyn;
  return 1;
}

YY_LOCAL(int) yymatchDot(yycontext *yy)
{
  if (yy->__pos >= yy->__limit && !yyrefill(yy)) return 0;
  ++yy->__pos;
  return 1;
}

YY_LOCAL(int) yymatchChar(yycontext *yy, int c)
{
  if (yy->__pos >= yy->__limit && !yyrefill(yy)) return 0;
  if ((unsigned char)yy->__buf[yy->__pos] == c)
    {
      ++yy->__pos;
      yyprintf((stderr, "  ok   yymatchChar(yy, %c) @ %s\n", c, yy->__buf+yy->__pos));
      return 1;
    }
  yyprintf((stderr, "  fail yymatchChar(yy, %c) @ %s\n", c, yy->__buf+yy->__pos));
  return 0;
}

YY_LOCAL(int) yymatchString(yycontext *yy, const char *s)
{
  int yysav= yy->__pos;
  while (*s)
    {
      if (yy->__pos >= yy->__limit && !yyrefill(yy)) return 0;
      if (yy->__buf[yy->__pos] != *s)
        {
          yy->__pos= yysav;
          return 0;
        }
      ++s;
      ++yy->__pos;
    }
  return 1;
}

YY_LOCAL(int) yymatchClass(yycontext *yy, unsigned char *bits)
{
  int c;
  if (yy->__pos >= yy->__limit && !yyrefill(yy)) return 0;
  c= (unsigned char)yy->__buf[yy->__pos];
  if (bits[c >> 3] & (1 << (c & 7)))
    {
      ++yy->__pos;
      yyprintf((stderr, "  ok   yymatchClass @ %s\n", yy->__buf+yy->__pos));
      return 1;
    }
  yyprintf((stderr, "  fail yymatchClass @ %s\n", yy->__buf+yy->__pos));
  return 0;
}

YY_LOCAL(void) yyDo(yycontext *yy, yyaction action, int begin, int end)
{
  while (yy->__thunkpos >= yy->__thunkslen)
    {
      yy->__thunkslen *= 2;
      yy->__thunks= (yythunk *)YY_REALLOC(yy, yy->__thunks, sizeof(yythunk) * yy->__thunkslen);
    }
  yy->__thunks[yy->__thunkpos].begin=  begin;
  yy->__thunks[yy->__thunkpos].end=    end;
  yy->__thunks[yy->__thunkpos].action= action;
  ++yy->__thunkpos;
}

YY_LOCAL(int) yyText(yycontext *yy, int begin, int end)
{
  int yyleng= end - begin;
  if (yyleng <= 0)
    yyleng= 0;
  else
    {
      while (yy->__textlen < (yyleng + 1))
	{
	  yy->__textlen *= 2;
	  yy->__text= (char *)YY_REALLOC(yy, yy->__text, yy->__textlen);
	}
      memcpy(yy->__text, yy->__buf + begin, yyleng);
    }
  yy->__text[yyleng]= '\0';
  return yyleng;
}

YY_LOCAL(void) yyDone(yycontext *yy, int yythunkpos)
{
  int pos;
  for (pos= yythunkpos;  pos < yy->__thunkpos;  ++pos)
    {
      yythunk *thunk= &yy->__thunks[pos];
      int yyleng= thunk->end ? yyText(yy, thunk->begin, thunk->end) : thunk->begin;
      yyprintf((stderr, "DO [%d] %p %s\n", pos, thunk->action, yy->__text));
      thunk->action(yy, yy->__text, yyleng);
    }
  yy->__thunkpos= 0;
}

YY_LOCAL(void) yyCommit(yycontext *yy)
{
  if ((yy->__limit -= yy->__pos))
    {
      memmove(yy->__buf, yy->__buf + yy->__pos, yy->__limit);
    }
  yy->__begin -= yy->__pos;
  yy->__end -= yy->__pos;
  yy->__pos= yy->__thunkpos= 0;
}

YY_LOCAL(int) yyAccept(yycontext *yy, int tp0)
{
  if (tp0)
    {
      fprintf(stderr, "accept denied at %d\n", tp0);
      return 0;
    }
  else
    {
      yyDone(yy, 0);
      yyCommit(yy);
    }
  return 1;
}

YY_LOCAL(void) yyPush(yycontext *yy, char *text, int count)
{
  yy->__val += count;
  while (yy->__valslen <= yy->__val - yy->__vals)
    {
      long offset= yy->__val - yy->__vals;
      yy->__valslen *= 2;
      yy->__vals= (YYSTYPE *)YY_REALLOC(yy, yy->__vals, sizeof(YYSTYPE) * yy->__valslen);
      yy->__val= yy->__vals + offset;
    }
}
YY_LOCAL(void) yyPop(yycontext *yy, char *text, int count)   { yy->__val -= count; }
YY_LOCAL(void) yySet(yycontext *yy, char *text, int count)   { yy->__val[count]= yy->__; }

#endif /* YY_PART */

#define	YYACCEPT	yyAccept(yy, yythunkpos0)

YY_RULE(int) yy_blank(yycontext *yy); /* 99 */
YY_RULE(int) yy_space(yycontext *yy); /* 98 */
YY_RULE(int) yy_alnum(yycontext *yy); /* 97 */
YY_RULE(int) yy_alpha(yycontext *yy); /* 96 */
YY_RULE(int) yy_expnt(yycontext *yy); /* 95 */
YY_RULE(int) yy_integer(yycontext *yy); /* 94 */
YY_RULE(int) yy_float_(yycontext *yy); /* 93 */
YY_RULE(int) yy_string(yycontext *yy); /* 92 */
YY_RULE(int) yy_DQUOTE(yycontext *yy); /* 91 */
YY_RULE(int) yy_character(yycontext *yy); /* 90 */
YY_RULE(int) yy_QUOTE(yycontext *yy); /* 89 */
YY_RULE(int) yy_postfix(yycontext *yy); /* 88 */
YY_RULE(int) yy_DECRE(yycontext *yy); /* 87 */
YY_RULE(int) yy_INCRE(yycontext *yy); /* 86 */
YY_RULE(int) yy_value(yycontext *yy); /* 85 */
YY_RULE(int) yy_PCENT(yycontext *yy); /* 84 */
YY_RULE(int) yy_SLASH(yycontext *yy); /* 83 */
YY_RULE(int) yy_STAR(yycontext *yy); /* 82 */
YY_RULE(int) yy_prefix(yycontext *yy); /* 81 */
YY_RULE(int) yy_MINUS(yycontext *yy); /* 80 */
YY_RULE(int) yy_PLURS(yycontext *yy); /* 79 */
YY_RULE(int) yy_mul(yycontext *yy); /* 78 */
YY_RULE(int) yy_RSHIFT(yycontext *yy); /* 77 */
YY_RULE(int) yy_LSHIFT(yycontext *yy); /* 76 */
YY_RULE(int) yy_add(yycontext *yy); /* 75 */
YY_RULE(int) yy_LESS(yycontext *yy); /* 74 */
YY_RULE(int) yy_LESSEQ(yycontext *yy); /* 73 */
YY_RULE(int) yy_GREATEQ(yycontext *yy); /* 72 */
YY_RULE(int) yy_GREATER(yycontext *yy); /* 71 */
YY_RULE(int) yy_shift(yycontext *yy); /* 70 */
YY_RULE(int) yy_NOTEQ(yycontext *yy); /* 69 */
YY_RULE(int) yy_EQUAL(yycontext *yy); /* 68 */
YY_RULE(int) yy_ineq(yycontext *yy); /* 67 */
YY_RULE(int) yy_BITAND(yycontext *yy); /* 66 */
YY_RULE(int) yy_BITOR(yycontext *yy); /* 65 */
YY_RULE(int) yy_eqop(yycontext *yy); /* 64 */
YY_RULE(int) yy_LOGAND(yycontext *yy); /* 63 */
YY_RULE(int) yy_bitadd(yycontext *yy); /* 62 */
YY_RULE(int) yy_LOGOR(yycontext *yy); /* 61 */
YY_RULE(int) yy_logmul(yycontext *yy); /* 60 */
YY_RULE(int) yy_COLON(yycontext *yy); /* 59 */
YY_RULE(int) yy_logadd(yycontext *yy); /* 58 */
YY_RULE(int) yy_RSQP(yycontext *yy); /* 57 */
YY_RULE(int) yy_LSQP(yycontext *yy); /* 56 */
YY_RULE(int) yy_func(yycontext *yy); /* 55 */
YY_RULE(int) yy_DIVEQU(yycontext *yy); /* 54 */
YY_RULE(int) yy_MULEQU(yycontext *yy); /* 53 */
YY_RULE(int) yy_SUBEQU(yycontext *yy); /* 52 */
YY_RULE(int) yy_ADDEQU(yycontext *yy); /* 51 */
YY_RULE(int) yy_assign(yycontext *yy); /* 50 */
YY_RULE(int) yy_mkBlock(yycontext *yy); /* 49 */
YY_RULE(int) yy__(yycontext *yy); /* 48 */
YY_RULE(int) yy_RETURN(yycontext *yy); /* 47 */
YY_RULE(int) yy_BREAK(yycontext *yy); /* 46 */
YY_RULE(int) yy_CONTINUE(yycontext *yy); /* 45 */
YY_RULE(int) yy_expr(yycontext *yy); /* 44 */
YY_RULE(int) yy_FOR(yycontext *yy); /* 43 */
YY_RULE(int) yy_WHILE(yycontext *yy); /* 42 */
YY_RULE(int) yy_ELSE(yycontext *yy); /* 41 */
YY_RULE(int) yy_RPAR(yycontext *yy); /* 40 */
YY_RULE(int) yy_LPAR(yycontext *yy); /* 39 */
YY_RULE(int) yy_IF(yycontext *yy); /* 38 */
YY_RULE(int) yy_args(yycontext *yy); /* 37 */
YY_RULE(int) yy_PRINT(yycontext *yy); /* 36 */
YY_RULE(int) yy_stmt(yycontext *yy); /* 35 */
YY_RULE(int) yy_NLINE(yycontext *yy); /* 34 */
YY_RULE(int) yy_list(yycontext *yy); /* 33 */
YY_RULE(int) yy_eventparams(yycontext *yy); /* 32 */
YY_RULE(int) yy_event(yycontext *yy); /* 31 */
YY_RULE(int) yy_mkState(yycontext *yy); /* 30 */
YY_RULE(int) yy_SEMI(yycontext *yy); /* 29 */
YY_RULE(int) yy_AROUD(yycontext *yy); /* 28 */
YY_RULE(int) yy_AFT(yycontext *yy); /* 27 */
YY_RULE(int) yy_BEF(yycontext *yy); /* 26 */
YY_RULE(int) yy_COMMA(yycontext *yy); /* 25 */
YY_RULE(int) yy_jointp(yycontext *yy); /* 24 */
YY_RULE(int) yy_RBRACE(yycontext *yy); /* 23 */
YY_RULE(int) yy_mkNil(yycontext *yy); /* 22 */
YY_RULE(int) yy_LBRACE(yycontext *yy); /* 21 */
YY_RULE(int) yy_eol(yycontext *yy); /* 20 */
YY_RULE(int) yy_RUN(yycontext *yy); /* 19 */
YY_RULE(int) yy_exp(yycontext *yy); /* 18 */
YY_RULE(int) yy_ASSIGN(yycontext *yy); /* 17 */
YY_RULE(int) yy_stmtbl(yycontext *yy); /* 16 */
YY_RULE(int) yy_params(yycontext *yy); /* 15 */
YY_RULE(int) yy_TYPE(yycontext *yy); /* 14 */
YY_RULE(int) yy_bracket(yycontext *yy); /* 13 */
YY_RULE(int) yy_child(yycontext *yy); /* 12 */
YY_RULE(int) yy_STRUCT(yycontext *yy); /* 11 */
YY_RULE(int) yy_jointps(yycontext *yy); /* 10 */
YY_RULE(int) yy_POINTCUT(yycontext *yy); /* 9 */
YY_RULE(int) yy_block(yycontext *yy); /* 8 */
YY_RULE(int) yy_ADVICE(yycontext *yy); /* 7 */
YY_RULE(int) yy_state(yycontext *yy); /* 6 */
YY_RULE(int) yy_id(yycontext *yy); /* 5 */
YY_RULE(int) yy_STATE(yycontext *yy); /* 4 */
YY_RULE(int) yy_define(yycontext *yy); /* 3 */
YY_RULE(int) yy_bln(yycontext *yy); /* 2 */
YY_RULE(int) yy_start(yycontext *yy); /* 1 */

YY_ACTION(void) yy_1_STATE(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_STATE\n"));
  {
#line 271
   __ = newObject(State) ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_7_TYPE(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_7_TYPE\n"));
  {
#line 226
   __ = newObject(Key)     ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_6_TYPE(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_6_TYPE\n"));
  {
#line 225
   __ = newObject(String)  ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_5_TYPE(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_5_TYPE\n"));
  {
#line 224
   __ = newObject(_Char)   ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_4_TYPE(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_4_TYPE\n"));
  {
#line 223
   __ = newObject(_Float)  ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_3_TYPE(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_3_TYPE\n"));
  {
#line 222
   __ = newObject(_Double) ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_2_TYPE(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_2_TYPE\n"));
  {
#line 221
   __ = newObject(_Long)   ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_TYPE(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_TYPE\n"));
  {
#line 220
   __ = newObject(_Integer);
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_NLINE(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_NLINE\n"));
  {
#line 215
   ++newline ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_id(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_id\n"));
  {
#line 199
   __ = intern(yytext);  ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_integer(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_integer\n"));
  {
#line 198
   __ = newInteger(yytext,newline) ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_character(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_character\n"));
  {
#line 197
   __ = _newStrChar(yytext);
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_string(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_string\n"));
  {
#line 196
   __ = newString(yytext) ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_float_(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_float_\n"));
  {
#line 192
   __ = newFloat(yytext,newline) ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_2_value(yycontext *yy, char *yytext, int yyleng)
{
#define i yy->__val[-1]
#define lhs yy->__val[-2]
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_2_value\n"));
  {
#line 186
   __ = newGetVar(i,newline) ;
  }
#undef yythunkpos
#undef yypos
#undef yy
#undef i
#undef lhs
}
YY_ACTION(void) yy_1_value(yycontext *yy, char *yytext, int yyleng)
{
#define i yy->__val[-1]
#define lhs yy->__val[-2]
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_value\n"));
  {
#line 181
   __ = lhs ;
  }
#undef yythunkpos
#undef yypos
#undef yy
#undef i
#undef lhs
}
YY_ACTION(void) yy_3_args(yycontext *yy, char *yytext, int yyleng)
{
#define i yy->__val[-1]
#define a yy->__val[-2]
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_3_args\n"));
  {
#line 179
   __ = a ;
  }
#undef yythunkpos
#undef yypos
#undef yy
#undef i
#undef a
}
YY_ACTION(void) yy_2_args(yycontext *yy, char *yytext, int yyleng)
{
#define i yy->__val[-1]
#define a yy->__val[-2]
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_2_args\n"));
  {
#line 176
   a = newPair(i, a) ;
  }
#undef yythunkpos
#undef yypos
#undef yy
#undef i
#undef a
}
YY_ACTION(void) yy_1_args(yycontext *yy, char *yytext, int yyleng)
{
#define i yy->__val[-1]
#define a yy->__val[-2]
